--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "angular": "~1.2.13",
     "d3": "~3.3.13",
-    "nvd3": "~v1.1.15-beta"
+    "nvd3": "~v1.7.1"
   },
   "devDependencies": {
     "moment": "~2.5.0",
